<resources>
    <string name="app_name">DSOTravel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MENU -->
    <string name="menu_completelist">Todas as atrações</string>
    <string name="menu_favorites">Atrações favoritas</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- DETAIL -->
    <string name="detail_label_couvert">Cobra Couvert?</string>
    <string name="detail_couvert_yes">Sim</string>
    <string name="detail_couvert_no">Não</string>
    <string name="detail_label_hours">Horário de Atendimento:</string>
    <string name="monday">Segunda-Feira</string>
    <string name="tuesday">Terça-Feira</string>
    <string name="wednesday">Quarta-Feira</string>
    <string name="thursday">Quinta-Feira</string>
    <string name="friday">Sexta-Feira</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="detail_button_favorite">Favoritar</string>
    <string name="detail_button_unfavorite">Desfavoritar</string>
    <string name="detail_button_map">Ver no mapa</string>

    <!-- FAVORITE KEY -->
    <string name="fav_koxixos">FAVKOXIXOS</string>
    <string name="fav_ostradamus">FAVOSTRADAMUS</string>
    <string name="fav_may">FAVMAY</string>
    <string name="fav_guacamole">FAVGUACAMOLE</string>
    <string name="fav_me">FAVME</string>
    <string name="fav_sanduicheria">FAVSANDUICHERIA</string>
    <string name="fav_wamaki">FAVWAMAKI</string>
    <string name="fav_didge">FAVDIDGE</string>
    <string name="fav_bits">FAVBITS</string>
    <string name="fav_toro">FAVTORO</string>
</resources>
