<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.leofontes.dsotravel.Fragments.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Ponte hercilio luz"
            android:id="@+id/textview_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/defaultLightBlue"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            app:srcCompat="@drawable/ponte"
            android:id="@+id/imageview_detail"
            android:scaleType="fitXY" />

        <TextView
            android:text="bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_detail_category"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/defaultGreen"
            android:layout_marginTop="5sp"
            android:singleLine="true"
            android:layout_marginBottom="5sp" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_detail_desc"
            android:textColor="@color/defaultLightBlue"
            android:textAlignment="center"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp">

            <TextView
                android:text="@string/detail_label_couvert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textview_detail_label_couvert"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/defaultGreen" />

            <TextView
                android:text="@string/detail_couvert_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textview_detail_couvert"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/defaultGreen" />
        </LinearLayout>

        <TextView
            android:text="@string/detail_label_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_detail_label_hours"
            android:textAlignment="center"
            android:textColor="@color/defaultLightBlue"
            android:textStyle="normal|bold"
            android:layout_marginTop="5sp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="6"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textview_detail_weekday"
                android:layout_weight="1"
                android:textColor="@color/defaultGreen"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textview_detail_hours"
                android:layout_weight="1"
                android:textColor="@color/defaultGreen"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:text="@string/detail_button_favorite"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/defaultLightBlue"
            android:layout_marginTop="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_detail_favorite"
            android:layout_marginBottom="20sp" />

        <Button
            android:text="@string/detail_button_map"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/button_detail_map"
            android:layout_gravity="center_horizontal"
            android:background="@color/defaultGreen"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
